--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
     <h2>About Me</h2>
     Aspiring Full stack developer<br>
     <h2>Education Details</h2>
-    <h3>Bachelors:</h3>
-    Anurag group of Institutions  ---   2017-2021<br>
-    Hyderabad, India
+    <ul>
+        <li>
+            <h3>Bachelors:</h3>
+            Anurag Group of Institutions  ---   2017-2021<br>
+            Hyderabad, India
+        </li>
 
-    <h3>Masters:</h3>
-    UMBC - University of Maryland Baltimore Courtney --- 2021-2023<br>
-    Baltimore, Maryland, USA<br>
+        <li>
+            <h3>Masters:</h3>
+            UMBC - University of Maryland Baltimore Courtney --- 2021-2023<br>
+            Baltimore, Maryland, USA<br>
+        </li>
+    </ul>
     
 
     
