--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     
 
-    <a href="./contact.html">Contact Details</a>
+    <a href="www.notnothealthy.com">Contact Details</a>
 
 </body>
 </html>
